# pfstools

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  NEWS  README  README.CMake  README.Cygwin  README.OSX  README.VisualStudio  README.matlab  TODO  cmake_config.h.in  make_src_dist.sh
cmake/: FindFFTW.cmake  FindMATLAB.cmake  FindNETPBM.cmake  FindOpenEXR.cmake
debian/: README.Debian  changelog  control  copyright  docs  libpfstools.install  octave-pfstools.install  pfstools.install  rules
doc/: .cvsignore  data_model.xmi  faq.txt  pfs_format_spec.tex
src/: .cvsignore  CMakeLists.txt
src/camera/: CMakeLists.txt  dcraw2hdrgen  dcraw2hdrgen.1  dcraw2hdrgen.in  jpeg2hdrgen  jpeg2hdrgen.1  jpeg2hdrgen.in  mitsunaga99.cpp  mitsunaga99.h  mitsunaga99_numerical.cpp  mitsunaga99_numerical.h  nrutil.cpp  nrutil.h  pfsalign.1  pfsalign.cpp  pfshdrcalibrate.1  pfshdrcalibrate.cpp  pfsinhdrgen  pfsinhdrgen.1  pfsinhdrgen.in  pfsinme  pfsinme.1  pfsinme.in  pfsmergehdr.cpp  pfsplotresponse  pfsplotresponse.1  pfsplotresponse.in  responses.cpp  responses.h  robertson02.cpp  robertson02.h
src/fileformat/: .cvsignore  CMakeLists.txt  exrio.cpp  exrio.h  hdrtiffio.cpp  hdrtiffio.h  pfsin.1  pfsin.in  pfsindcraw.1  pfsindcraw.in  pfsinexr.1  pfsinexr.cpp  pfsingdal.1  pfsingdal.cpp  pfsinimgmagick.1  pfsinimgmagick.cpp  pfsinjpeghdr.1  pfsinjpeghdr.cpp  pfsinmulti.1  pfsinmulti.in  pfsinpfm.1  pfsinpfm.cpp  pfsinppm.1  pfsinppm.cpp  pfsinrgbe.1  pfsinrgbe.cpp  pfsintiff.1  pfsintiff.cpp  pfsout.1  pfsout.in  pfsoutexr.1  pfsoutexr.cpp  pfsoutffmpeg  pfsoutffmpeg.1  pfsoutimgmagick.1  pfsoutimgmagick.cpp  pfsoutjpeghdr.1  pfsoutjpeghdr.cpp  pfsoutpfm.1  pfsoutpfm.cpp  (+10 more)
src/filter/: .cvsignore  CMakeLists.txt  display_function.cpp  display_function.h  pfsabsolute.1  pfsabsolute.cpp  pfscat.1  pfscat.cpp  pfsclamp.1  pfsclamp.cpp  pfscolortransform.1  pfscolortransform.cpp  pfscut.1  pfscut.cpp  pfsdisplayfunction.1  pfsdisplayfunction.cpp  pfsextractchannels.1  pfsextractchannels.cpp  pfsflip.1  pfsflip.cpp  pfsgamma.1  pfsgamma.cpp  pfspad.1  pfspad.cpp  pfspanoramic.1  pfspanoramic.cpp  pfspanoramic_new.cpp  pfsretime.1  pfsretime.cpp  pfsrotate.1  pfsrotate.cpp  pfssize.1  pfssize.cpp  pfstag.1  pfstag.cpp
src/getopt/: CMakeLists.txt
src/hdrhtml/: .cvsignore  CMakeLists.txt  hdrhtml.cpp  hdrhtml.h  pfsouthdrhtml.1  pfsouthdrhtml.cpp
src/matlab/: .cvsignore  CMakeLists.txt  Contents.m  Makefile.win32  compatibility.h  compile_win32.bat  mex_utils.cpp  mex_utils.h  pfs_read_image.m  pfs_read_luminance.m  pfs_read_rgb.m  pfs_read_rgbe.cpp  pfs_read_xyz.m  pfs_shell.m  pfs_test_shell.m  pfs_transform_colorspace.cpp  pfs_transform_colorspace.m  pfs_write_image.m  pfs_write_luminance.m  pfs_write_rgb.m  pfs_write_xyz.m  pfsclose.cpp  pfsclose.m  pfsget.cpp  pfsget.m  pfsopen.cpp  pfsopen.m  pfspclose.cpp  pfspclose.m  pfspopen.cpp  pfspopen.m  pfsput.cpp  pfsput.m  pfsview.m  pfsview_rgb.m
src/octave/: .cvsignore  CMakeLists.txt  octave_util.h  pfs_close_frames.m  pfs_open_frames.m  pfs_read_luminance.m  pfs_read_rgb.m  pfs_read_xyz.m  pfs_write_rgb.m  pfsclose.cpp  pfsclose.help  pfscrop  pfsget.cpp  pfsget.help  pfsoctavelum  pfsoctavelum.1  pfsoctavergb  pfsoctavergb.1  pfsopen.cpp  pfsopen.help  pfsput.cpp  pfsput.help  pfsread.cpp  pfsread.help  pfssaturate  pfssize.m  pfsstat  pfsstat.1  pfstransform_colorspace.cpp  pfstransform_colorspace.help  pfsview.m  pfsview_list.m  pfsview_rgb.m  pfswrite.cpp  pfswrite.help
src/octave/help_files/: pfsclose_help.h  pfsget_help.h  pfsopen_help.h  pfsput_help.h  pfsread_help.h  pfstransform_colorspace_help.h  pfswrite_help.h
src/pfs/: CMakeLists.txt  colorspace.cpp  pfs.cpp  pfs.h  pfs.pc.in
src/pfsglview/: .cvsignore  CMakeLists.txt  glenv.h  histogram.cpp  histogram.h  m_histogram.cpp  m_histogram.h  m_on_screen_display.cpp  m_on_screen_display.h  m_status.cpp  m_status.h  module.cpp  module.h  pfsglview.1  pfsglview.cpp  picture_io.cpp  picture_io.h  winstat.cpp  winstat.h
src/pfsview/: .cvsignore  CMakeLists.txt  histogram.cpp  luminancerange_widget.cpp  luminancerange_widget.h  main.cpp  main.cpp.~1.18.~  main.h  pfsv.1  pfsv.in  pfsview.1  pfsview.qrc  pfsview_widget.cpp  pfsview_widget.cpp.~1.25.~  pfsview_widget.h  resources.cpp
src/pfsview/mac_os/: Info.plist  pfsview_icon_mac.icns
src/tmo/: CMakeLists.txt
src/tmo/drago03/: CMakeLists.txt  pfstmo_drago03.1  pfstmo_drago03.cpp  tmo_drago03.cpp.~1.4.~  tmo_drago03.h
src/tmo/durand02/: CMakeLists.txt  bilateral.cpp  bilateral.h  fastbilateral.cpp  fastbilateral.h  pfstmo_durand02.1  pfstmo_durand02.cpp  pfstmo_durand02.cpp.~1.5.~  tmo_durand02.cpp  tmo_durand02.h
src/tmo/fattal02/: CMakeLists.txt  pde.cpp  pde.cpp.~1.8.~  pde.h  pde_fft.cpp  pfstmo_fattal02.1  pfstmo_fattal02.cpp  tmo_fattal02.cpp  tmo_fattal02.h
src/tmo/ferradans11/: CMakeLists.txt  Imagen.cpp  Imagen.h  pfstmo_ferradans11.1  pfstmo_ferradans11.cpp  tmo_ferradans11.cpp
src/tmo/imageproc/: .cvsignore
src/tmo/mai11/: CMakeLists.txt  compression_tmo.cpp  compression_tmo.h  pfstmo_mai11.1  pfstmo_mai11.cpp
src/tmo/mantiuk06/: .cvsignore  CMakeLists.txt  contrast_domain.cpp  contrast_domain.h  pfstmo_mantiuk06.1  pfstmo_mantiuk06.cpp
src/tmo/mantiuk08/: .cvsignore  CMakeLists.txt  display_adaptive_tmo.cpp  display_adaptive_tmo.h  display_function.cpp  display_function.h  display_size.cpp  display_size.h  pfstmo_mantiuk08.1  pfstmo_mantiuk08.cpp
src/tmo/mantiuk08/cqp/: README.txt  cqpminimizer.cpp  mg_pdip.cpp
src/tmo/pattanaik00/: .cvsignore  CMakeLists.txt  pfstmo_pattanaik00.1  pfstmo_pattanaik00.cpp  pfstmo_pattanaik00.cpp.~1.3.~  tmo_pattanaik00.cpp  tmo_pattanaik00.h
src/tmo/reinhard02/: CMakeLists.txt  approx.cpp  pfstmo_reinhard02.1  pfstmo_reinhard02.cpp  pfstmo_reinhard02.cpp.~1.3.~  tmo_reinhard02.cpp  tmo_reinhard02.h
src/tmo/reinhard05/: CMakeLists.txt  pfstmo_reinhard05.1  pfstmo_reinhard05.cpp  tmo_reinhard05.cpp  tmo_reinhard05.h
